[LIBS-468] Add custom service for publish_language

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,12 @@ services:
     command:
       - --diff
       - ./data
+
+  shellcheck:
+    image: koalaman/shellcheck-alpine
+    volumes:
+      - $PWD:/mnt:ro
+    command:
+      - '/bin/sh'
+      - '-c'
+      - 'shellcheck /mnt/bin/* /mnt/hooks/*'
